feat: Enhance QuarkMQ client with reconnect capabilities and context-aware RPC calls
- Added context support to RPC calls for better timeout management.
- Implemented automatic reconnection with exponential backoff strategy.
- Introduced subscription tracking for replay after reconnection.
- Enhanced error handling for RPC calls and connection states.
- Added options for configuring client behavior, including timeouts and reconnection settings.
- Created comprehensive unit tests for new features and existing functionality.
- Updated integration tests to utilize temporary directories for server data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bytes = "1"
 chitchat = "0.12"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.16"
+tempfile = "3"
 thiserror = "2"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
