--- a/crates/quarkmq-broker/Cargo.toml
+++ b/crates/quarkmq-broker/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 quarkmq-protocol = { workspace = true }
+quarkmq-storage = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -14,3 +15,6 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 dashmap = { workspace = true }
 parking_lot = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
