--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -15,3 +15,4 @@ uuid = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 futures-util = { workspace = true }
+tempfile = { workspace = true }
