--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -5,14 +5,12 @@ edition = "2021"
 publish = false
 
 [dependencies]
-quarkmq-protocol = { workspace = true }
 quarkmq-broker = { workspace = true }
 quarkmq-server = { workspace = true }
-quarkmq-client = { workspace = true }
+quarkmq-protocol = { workspace = true }
+kafka-protocol = { workspace = true }
+bytes = { workspace = true }
 tokio = { workspace = true }
-serde_json = { workspace = true }
-uuid = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-futures-util = { workspace = true }
 tempfile = { workspace = true }
