--- a/crates/quarkmq-protocol/Cargo.toml
+++ b/crates/quarkmq-protocol/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { workspace = true }
-serde_json = { workspace = true }
-uuid = { workspace = true }
-chrono = { workspace = true }
+kafka-protocol = { workspace = true }
+bytes = { workspace = true }
+tokio = { workspace = true }
 thiserror = { workspace = true }
+tracing = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
