--- a/crates/quarkmq-server/Cargo.toml
+++ b/crates/quarkmq-server/Cargo.toml
@@ -9,17 +9,18 @@ path = "src/main.rs"
 
 [dependencies]
 quarkmq-protocol = { workspace = true }
+quarkmq-storage = { workspace = true }
 quarkmq-broker = { workspace = true }
+kafka-protocol = { workspace = true }
+bytes = { workspace = true }
 tokio = { workspace = true }
-tokio-tungstenite = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
+toml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-toml = { workspace = true }
 clap = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
-futures-util = { workspace = true }
-uuid = { workspace = true }
-dashmap = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
